# Producto2

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md
cpp/: clisoap1.cpp  clisoap2.cpp  conint.cpp
dotnet10/version10soapp/: Program.cs  cliso1ap.csproj
dotnet10/version2-trans/: Program.cs  version2-trans.csproj
dotnet10/version3-iont/: Program.cs
golang/: clisoap1.go  clisoap2.go  conintl.go  go.mod
java/: pom.xml
java/version1-soapj/: clisoap1.java
java/version2-transj/: clisoap2.java
java/version3-webj/: ConIntl.java
node/version1-soap/: clisoap1node.js
node/version2-translate/: clisoap2node.js
node/version3-web/: conintlnode.js
perl/version1-soapp/: clisoap1perl.pl
perl/version2-transp/: clisoap2-transp.pl
perl/version3-intp/: clinintlp.pl
ruby/version1-soapr/: clisoap1ruby.rb
ruby/version2-transr/: clisoap2trans.rb
ruby/version3-int/: conintlr.rb
rust/version1-soapru/: clisoap1ru.rs  clisoap2ru.rs  conintlru.rs
